--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 01</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#"> WebStudio </a>
+        <a href="./index.html"> <span class="logo">Web</span> Studio </a>
             
             <ul>
-                <li><a href="#">Студия</a> </li>
-                <li><a href="#">Портфолио</a> </li>
+                <li><a href="./index.html">Студия</a> </li>
+                <li><a href="./portfolio.html">Портфолио</a> </li>
                 <li><a href="#">Контакты</a> </li>
             </ul>
         </nav>
@@ -78,7 +79,7 @@
 </Section>
 </main>
 <footer>
-    <a href="#"> WebStudio </a>
+<a href="./index.html"> <span class="logo" >Web</span> Studio </a>
     <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
