--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html"> <span class="logo" >Web</span> Studio </a>
-
+            <a class="logo-color" href="./index.html"> <span class="logo"> Web</span>Studio</a>
             <ul>
                 <li><a href="./index.html">Студия</a> </li>
                 <li><a href="#">Портфолио</a> </li>
@@ -89,8 +88,7 @@
        </section>
     </main>                
     <footer>
-    <a href="./index.html"> <span class="logo">Web</span> Studio </a>
-
+    <a class="logo-color" href="./index.html"> <span class="logo"> Web</span>Studio</a>
 
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
