--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 01</title>
-    <link rel="stylesheet" href="./css/styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;500&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header-color">
@@ -39,60 +39,62 @@
 </Section>
 <!-- Преимущества -->
 <section>
-    <h2 class="benefits" >Преимущества</h2>
-    <ul class="benefits-list" >
-         <li><h3>Внимание к деталям</h3>
+    <h2 class="benefits-title" >Преимущества</h2>
+    <ul>
+         <li class="benefits-list"><h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-         <li><h3>Пунктуальность</h3>
+         <li class="benefits-list"><h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> </li>
-         <li><h3>Планирование</h3>
+         <li class="benefits-list"><h3>Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-         <li><h3>Современные технологии</h3>
+         <li class="benefits-list"><h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
     </ul>
 </section>
 <!-- Чем мы занимаемся -->
 <section>
-    <h2>Чем мы занимаемся</h2>
-    <ul>
+    <h2 class="my-work-title" >Чем мы занимаемся</h2>
+    <ul class="my-work-foto" >
     <li><img src="./images/img.jpg" alt="Разработка сайтов" width="370"> </li>
      <li> <img src="./images/box-2.jpg" alt="Разработка мобильных приложений" width="370"> </li>
     <li> <img src="./images/box-3.jpg" alt="Дизайн" width="370"> </li>
     </ul>
 </section>
 <!-- Наша команда -->
-<Section>
-    <h2>Наша команда</h2>
+<Section class="team-section">
+    <h2 class="team-title" >Наша команда</h2>
     <ul>
-        <li>
+        <li class="team-list" >
             <img src="./images/img0.jpg" alt="Фото" width="270" >
             <h3>Игорь Демьяненко</h3>
         <p lang="en"> Product Designer</p>
     </li>
-        <li><img src="./images/img(1).jpg" alt="Фото" width="270">
+        <li class="team-list" ><img src="./images/img(1).jpg" alt="Фото" width="270">
             <h3>Ольга Репина</h3>
         <P lang="en"> Frontend Developer</P>
     </li>
-        <li><img src="./images/img(2).jpg" alt="Фото" width="270">
+        <li class="team-list" ><img src="./images/img(2).jpg" alt="Фото" width="270">
             <h3>Николай Тарасов</h3>
         <p lang="en"> Marketing</p>
     </li>
-        <li><img src="./images/img(3).jpg" alt="Фото" width="270">
+        <li class="team-list" ><img src="./images/img(3).jpg" alt="Фото" width="270">
             <h3>Михаил Ермаков</h3>
         <p lang="en"> UI Designer</p>
         </li>
     </ul> 
 </Section>
 </main>
-<footer>
-<a class="logo-color" href="./index.html"> <span class="logo"> Web</span>Studio</a>
+<footer class="my-footer">
+    <a class="logo-color-footer" href="./index.html"> <span class="logo"> Web</span>Studio</a>
     <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="my-location">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="contacts">
             <li><a class="contact" href="mailto:info@devstudio.com;">info@devstudio.com</a></li>
             <li> <a class="contact" href="tel:+380961111111;">+38 096 111 11 11</a></li>
-        
+
         </ul>
+
+
     </address>
 </footer>
 </body>
