--- a/portfolio.html
+++ b/portfolio.html
@@ -37,74 +37,77 @@
        <section>
            <h1>Портфолио</h1>
            
-           <ul>
-               <li><button type="button"> Все</button></li>
-               <li><button type="button">Веб-сайты</button></li>
-               <li><button type="button">Приложения</button></li>
-               <li><button type="button">Дизайн</button></li>
-               <li><button type="button">Маркетинг</button></li>
+           <ul class="portf-ul">
+            <!-- <li><button class="portf-button" type="button"> Все</button></li> -->
+               <li class="portf-li"><button class="portf-button" type="button"> Все</button></li>
+               <li class="portf-li"><button class="portf-button-web" type="button">Веб-сайты</button></li>
+               <li class="portf-li"><button class="portf-button-app" type="button">Приложения</button></li>
+               <li class="portf-li"><button class="portf-button-design" type="button">Дизайн</button></li>
+               <li class="portf-li"><button class="portf-button-market" type="button">Маркетинг</button></li>
            </ul>
-        <h2>Поєкти</h2>
+        <h2 class="progekt-title" >Проєкти</h2>
            <ul>
-                <li> <a href="#"></a>
-                    <img src="./images/tc.jpg" alt="Фото логотипа"width="370" >
+                <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/tc.jpg" alt="Фото логотипа" width="370" >
                     <h3>Технокряк</h3>
                     <p>Веб-сайт </p>
                 </li>
-                <li> <a href="#"></a>
-                    <img src="./images/newOrl.jpg" alt="Фото логотипа"width="370" >
+                <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/newOrl.jpg" alt="Фото логотипа" width="370" >
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p>Дизайн</p>
                 </li>
-                <li> <a href="#"></a>
-                    <img src="./images/seafood.jpg" alt="Фото логотипа"width="370" >
+                <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/seafood.jpg" alt="Фото логотипа" width="370" >
                     <h3>Ресторан Seafood</h3>
                     <p>Приложение</p>
                 </li>
-                <li> <a href="#"></a>
-                    <img src="./images/prime.jpg" alt="Фото логотипа"width="370" >
+                <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/prime.jpg" alt="Фото логотипа" width="370" >
                     <h3>Проект Prime</h3>
                     <p>Маркетинг</p>
                 </li>
-                <li> <a href="#"></a>
-                    <img src="./images/boxsses.jpg" alt="Фото логотипа"width="370" >
+                <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/boxsses.jpg" alt="Фото логотипа" width="370" >
                     <h3>Проект Boxes</h3>
                     <p>Приложение</p>
                 </li>
-                <li> <a href="#"></a>
-                    <img src="./images/inspir.jpg" alt="Фото логотипа"width="370" >
+                <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/inspir.jpg" alt="Фото логотипа" width="370" >
                     <h3>Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
                 </li>
-                <li> <a href="#"></a>
-                    <img src="./images/lim.jpg" alt="Фото логотипа"width="370" >
+                <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/lim.jpg" alt="Фото логотипа" width="370" >
                     <h3>Издание Limited Edition</h3>
                     <p>Дизайн</p>
                 </li>
-                 <li> <a href="#"></a>
-                    <img src="./images/lab.jpg" alt="Фото логотипа"width="370" >
+                 <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/lab.jpg" alt="Фото логотипа" width="370" >
                     <h3>Проект LAB</h3>
                     <p>Маркетинг</p>
-
-                <li> <a href="#"></a>
-                    <img src="./images/groving.jpg" alt="Фото логотипа"width="370" >
+                 </li>
+                <li class="progekt-list" > <a href="#"></a>
+                    <img src="./images/groving.jpg" alt="Фото логотипа" width="370" >
                     <h3>Growing Business</h3>
                     <p>Приложение</p>
                 </li>
            </ul>
        </section>
     </main>                
-    <footer>
-    <a class="logo-color" href="./index.html"> <span class="logo"> Web</span>Studio</a>
+<footer class="my-footer">
+    <a class="logo-color-footer" href="./index.html"> <span class="logo"> Web</span>Studio</a>
+    <address>
+        <p class="my-location">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="contacts">
+            <li><a class="contact" href="mailto:info@devstudio.com;">info@devstudio.com</a></li>
+            <li> <a class="contact" href="tel:+380961111111;">+38 096 111 11 11</a></li>
 
-        <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
-                <li><a href="tel:+380961111111;">+38 096 111 11 11</a></li>
-                <li><a href="mailto:info@devstudio.com;">info@devstudio.com</a></li>
-            </ul>
-        </address>
-    </footer>
+        </ul>
+
+
+    </address>
+</footer>
 </body>
 
 </html>
