Устранены замечания ментора
Устранены замечания ментора
Логотип ,шрифты кнопки.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Module 01</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;500&family=Roboto:wght@400;500;700;900&display=swap"
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -32,7 +30,7 @@
 <main>
 <!-- Герой -->
 <Section class="hero">
-    <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+    <h1 class="hero-title">ЭФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
     <button class="hero-button" type="button">Заказать услугу</button>
 </Section>
 <!-- Преимущества -->
