Изменил цвет  контактов в footer

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <address>
         <p class="my-location">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="contacts">
-            <li><a class="contact" href="mailto:info@devstudio.com;">info@devstudio.com</a></li>
-            <li> <a class="contact" href="tel:+380961111111;">+38 096 111 11 11</a></li>
+            <li><a class="contact-footer" href="mailto:info@devstudio.com;">info@devstudio.com</a></li>
+            <li> <a class="contact-footer" href="tel:+380961111111;">+38 096 111 11 11</a></li>
 
         </ul>
     </address>
